--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,15 @@
 <resources>
+
+    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
+    <string name="back4app_app_id">hpnHqEyNvMNrQmlR4vWOtaqZjJrFk393awCNaC3e</string>
+    <string name="back4app_client_key">AKOrCT90pekh4FRnw5C3mVKZicYczy1TEMBU2WQp</string>
+
+    <string name="drawer_title_locations">Locations</string>
+    <string name="drawer_title_settings">Settings</string>
+
+    <string name="google_maps_key">AIzaSyCrjHoNx5-vEVW1UHKG9eH1-op91B6hl9g</string>
+
+
     <string name="app_name">wearAmask</string>
     <string name="onboarding_heading_1">Location Based</string>
     <string name="onboarding_heading_2">Mask Reminder</string>
@@ -12,4 +23,8 @@
     <string name="onboarding_back">Back</string>
     <string name="onboarding_finish">Finish</string>
     <string name="onboarding_skip">Skip</string>
+    <string name="title_activity_maps">Map</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
