--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,26 @@
     <string name="onboarding_skip">Skip</string>
     <string name="title_activity_maps">Map</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="bottom_sheet_to_start">To get started, you need to login to your account</string>
+    <string name="bottom_sheet_login">Login</string>
+    <string name="bottom_sheet_register">Or else, create an account</string>
+    <string name="bottom_sheet_welcome">Welcome, </string>
+    <string name="bottom_sheet_add_location_hint">Add A Location</string>
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="username_hint">Username</string>
+    <string name="password_hint">Password</string>
+    <string name="login_welcome">Welcome!</string>
+    <string name="login_create_account">Create an account</string>
+    <string name="login_forgot_password">Forgot password</string>
+    
+    <string name="sign_up_heading">Sign Up</string>
+    <string name="sign_up_email">Email</string>
+    <string name="sign_up_reenter_password">Re-enter password</string>
+    <string name="sign_up_login">Login instead</string>
+
+    <string name="error_username_length">Username must be more than 5 and less than 20 characters</string>
+    <string name="error_password_length">Password must be at least 7 characters</string>
+    <string name="error_email_format">Incorrect email format</string>
 </resources>
