--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
 
     <string name="drawer_title_locations">Locations</string>
     <string name="drawer_title_settings">Settings</string>
+    <string name="drawer_title_logout">Log out</string>
 
     <string name="google_maps_key">AIzaSyCrjHoNx5-vEVW1UHKG9eH1-op91B6hl9g</string>
 
@@ -47,4 +48,8 @@
     <string name="error_username_length">Username must be more than 5 and less than 20 characters</string>
     <string name="error_password_length">Password must be at least 7 characters</string>
     <string name="error_email_format">Incorrect email format</string>
+
+    <string name="facebook_app_id">647975436132621</string>
+    <string name="fb_login_protocol_scheme">fb647975436132621</string>
+    <string name="facebook_signup_text">Facebook Sign up</string>
 </resources>
