--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,7 +100,7 @@
 
     <string name="precautions_title">Taking \nPrecautions</string>
     <string name="precautions_1_heading">wearAmask</string>
-    <string name="precautions_1_para">Masks can help prevent the spread of COVID-19.</string>
+    <string name="precautions_1_para">Masks can help prevent the spread of the virus.</string>
     <string name="precautions_1_link">Learn more about masks</string>
 
     <string name="precautions_2_heading">Social distance</string>
